Mark GpuChannelHost::ShareToGpuProcess as a transient failure.

Currently it is marked as fatal because historically sharing with a
dead process caused a memory leak on Windows (see crbug.com/882103#c10).
This is no longer the case, and the failure is not a permanent error
which is unrecoverable or user error, so it should rightfully be marked
as transient. This allows us to create a new context if the gpu process
crashed/was lost while setting things up and the ShareToGpuProcess()
returns a null handle.

R=piman@chromium.org

Bug: 882103
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I9426837eea9ebf3f56f6b2534eec9322ed2ee6c8
Reviewed-on: https://chromium-review.googlesource.com/1219992
Commit-Queue: danakj <danakj@chromium.org>
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590820}
Former-commit-id: 037da945faf417a7d4bf374da804eead8ffd4ec8